# Spaceship

./: .gitignore  .gitmodules  README.md
.github/workflows/: c-cpp.yml
game/: CMakeLists.txt
game/assets/: DefaultMissionScript.lua  DefaultShellScript.lua  DefenceMissionLevel.lua  MainMenuLevel.lua  MissionObjective_1.lua  PlayerContoller.lua
game/include/ssg/: Actor.hpp  AsteroidSpawner.hpp  Character.hpp  CollisionComponent.hpp  CollisionSubSystem.hpp  Configs.hpp  FileSystemHelper.hpp  GameEngine.hpp  GameLoop.hpp  GameObject.hpp  GameObjectComponent.hpp  GameStateBase.hpp  GameStateManager.hpp  GameWindow.hpp  Global.hpp  IScript.hpp  IScriptBuilder.hpp  ISubSystem.hpp  InputEvent.hpp  InputListener.hpp  InputListenerComponent.hpp  InputManager.hpp  InputSubSystem.hpp  Level.hpp  LevelScript.hpp  LevelScriptBuilder.hpp  MeshComponent.hpp  MissionGameState.hpp  MissionGameStateScript.hpp  MissionGameStateScriptBuilder.hpp  MoveComponent.hpp  Object.hpp  Objective.hpp  Pawn.hpp  Physic.hpp  PhysicComponent.hpp  PlayerController.hpp  PlayerControllerScript.hpp  PositionComponent.hpp  Projectile.hpp  (+17 more)
game/sources/: Actor.cpp  AsteroidSpawner.cpp  Character.cpp  CollisionComponent.cpp  CollisionSubSystem.cpp  Configs.cpp  FileSystemHelper.cpp  GameEngine.cpp  GameLoop.cpp  GameObject.cpp  GameObjectComponent.cpp  GameStateBase.cpp  GameStateManager.cpp  GameWindow.cpp  Global.cpp  IScript.cpp  IScriptBuilder.cpp  ISubSystem.cpp  InputEvent.cpp  InputListener.cpp  InputListenerComponent.cpp  InputManager.cpp  InputSubSystem.cpp  Level.cpp  LevelScript.cpp  LevelScriptBuilder.cpp  MeshComponent.cpp  MissionGameState.cpp  MissionGameStateScript.cpp  MissionGameStateScriptBuilder.cpp  MoveComponent.cpp  Object.cpp  Objective.cpp  Pawn.cpp  Physic.cpp  PhysicComponent.cpp  PlayerController.cpp  PlayerControllerScript.cpp  PositionComponent.cpp  Projectile.cpp  (+17 more)
games/SpaceShip/: CMakeLists.txt
games/SpaceShip/include/: Actor.hpp  Character.hpp  Configs.hpp  GameLoop.hpp  GameObject.hpp  GameObjectComponent.hpp  GameStateBase.hpp  GameStateManager.hpp  GameWindow.hpp  InputEvent.hpp  InputListener.hpp  InputManager.hpp  MeshComponent.hpp  MissionGameState.hpp  MoveComponent.hpp  Object.hpp  Objective.hpp  Physic.hpp  PhysicComponent.hpp  PlayerController.hpp  PositionComponent.hpp  QuadTree.hpp  RenderQueue.hpp  Renderer.hpp  RotationComponent.hpp  ScaleComponent.hpp  ShellGameState.hpp  Timer.hpp  Vector2D.hpp  World.hpp
games/SpaceShip/sources/: Actor.cpp  Character.cpp  GameLoop.cpp  GameObject.cpp  GameObjectComponent.cpp  GameStateBase.cpp  GameStateManager.cpp  GameWindow.cpp  InputEvent.cpp  InputListener.cpp  InputManager.cpp  MeshComponent.cpp  MissionGameState.cpp  MoveComponent.cpp  Object.cpp  Objective.cpp  Physic.cpp  PhysicComponent.cpp  PlayerController.cpp  PositionComponent.cpp  Renderer.cpp  RotationComponent.cpp  ScaleComponent.cpp  ShellGameState.cpp  Timer.cpp  Vector2D.cpp  World.cpp  main.cpp
scripts/: build_engine.py  build_game.py  generate_engine_project.py  generate_game_project.py
